[tool.poetry]
name = "lolpixels"
version = "0.1.0"
description = "Laugh Out Loud - Pictures Instantly eXalted, Enhanced, and Laughably Sharp."
authors = ["Daniël van Adrichem <daniel5gh@spiet.nl>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
